--- a/Mos Burger Spring Font End/burgermanage.css
+++ b/Mos Burger Spring Font End/burgermanage.css
@@ -1,4 +1,5 @@
-        body {
+      /*burger manage  */
+      body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
